--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,18 @@ body {
   color: white;
 }
 
+@layer components {
+  ::-webkit-scrollbar {
+    width: 8px; 
+  }
+  ::-webkit-scrollbar-track {
+    background-color: #060606; 
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: #fde047;
+  }
+}
+
 @layer base {
   :root {
     --radius: 0.5rem;
