style: change secondary color

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
     background-color: #060606; 
   }
   ::-webkit-scrollbar-thumb {
-    background-color: #fde047;
+    background-color: #7dd3fc;
   }
 }
 
